# summarize_audio

./: .gitignore  LICENSE  README.md  batch_summary.py  pyproject.toml  requirements.txt  summarize.py
src/: audio_handler.py  doc_write.py  prompts.py
