[tool.poetry]
name = "summarize-audio"
version = "0.1.0"
description = "A Python tool that transcribes audio files, performs speaker diarization, and generates AI-powered summaries."
authors = ["jjmanrique <jjmanriquefranco@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
torch = ">=2.3.0,<2.4.0"
faster-whisper = ">=1.1.0"
transformers = "4.51.2"
python-dotenv = "1.1.0"
whisperx = "3.3.1"
python-docx = "^1.2.0"
matplotlib = "^3.10"
google-genai = "^1.57.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
